--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,12 @@
   right: 0;
   margin: auto;
 }
+
+.arrow {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
