--- a/src/App.css
+++ b/src/App.css
@@ -69,3 +69,11 @@
   width: 60%;
   font-size: 1rem;
 }
+
+.testimonials {
+  text-align: center;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  text-transform: uppercase;
+  letter-spacing: 0.5rem;
+}
