--- a/src/App.css
+++ b/src/App.css
@@ -77,3 +77,18 @@
   text-transform: uppercase;
   letter-spacing: 0.5rem;
 }
+
+.p2 {
+  font-family: Barlow;
+  width: 70%;
+  margin: 0 auto;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
+.rank {
+  font-size: 1rem;
+  font-family: Barlow;
+}
+
+.
