--- a/src/App.css
+++ b/src/App.css
@@ -95,6 +95,15 @@
   padding-bottom: 3rem;
 }
 
+.a3 {
+  font-family: Barlow;
+  font-size: 1.15rem;
+  color: white;
+  text-align: center;
+  margin: 0;
+  text-decoration: none;
+}
+
 .rank {
   font-size: 1rem;
   font-family: Barlow;
@@ -104,4 +113,26 @@
   padding-top: 4rem;
   background-color: hsl(168, 34%, 41%);
   color: hsl(167, 40%, 24%);
+}
+
+.logo {
+  color: white;
+  font-size: 2rem;
+  padding: 1rem;
+}
+
+.choice {
+  font-family: Barlow;
+  font-size: 1rem;
+  color: white;
+  text-align: center;
+  margin: 0;
+}
+
+.btn-contact {
+  margin-right: 1.5rem;
+  color: black;
+  background-color: white !important;
+  font-size: 1rem !important;
+  padding: 1rem 1.5rem !important;
 }
