--- a/src/App.css
+++ b/src/App.css
@@ -136,3 +136,7 @@
   font-size: 1rem !important;
   padding: 1rem 1.5rem !important;
 }
+
+.btn-contact:hover {
+  background-color: rgba(255, 255, 255, 0.5) !important;
+}
